[package]
name = "Neko-Love"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
bytes = "1.10.1"
chrono = "0.4.41"
colored = "3.0.0"
dotenv = "0.15.0"
mime_guess = "2.0.5"
moka = { version = "0.12.10", features = ["future"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
